Commenting out agents service, mocking responses from this service
